--- a/UserManagement/appsettings.json
+++ b/UserManagement/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "default": "Server=DESKTOP-V37JV2T;Database=TaskUserDB;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "default": "Server=DESKTOP-V37JV2T;Database=TaskUsersDatabase;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
   "Logging": {
     "LogLevel": {
